# aurelius

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
contrib/claude-code/: aurelius-capture.sh  aurelius-reindex.sh  aurelius-track-edit.sh  install.sh
contrib/git-hooks/: install.sh  post-commit
crates/au/: Cargo.toml
crates/au/src/: commands.rs  main.rs  view.rs
crates/aurelius/: Cargo.toml
crates/aurelius-core/: Cargo.toml
crates/aurelius-core/src/: connector.rs  db.rs  graph.rs  indexer.rs  lib.rs  models.rs  timeforged.rs
crates/aurelius-core/src/graph/: crud.rs  mod.rs  search.rs  traverse.rs
crates/aurelius/src/: lib.rs  main.rs  mcp.rs
crates/aurelius/src/mcp/: handlers.rs  mod.rs  protocol.rs  tools.rs
crates/aurelius/src/mcp/handlers/: crud.rs  mod.rs  search.rs  session.rs  status.rs  task.rs
crates/aurelius/src/search/: brave.rs  cache.rs  mod.rs
specs/001-graph-cluster-layout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-graph-cluster-layout/checklists/: requirements.md
specs/001-graph-cluster-layout/contracts/: physics-module.md
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: api.ts  app.tsx  index.css  theme.ts  types.ts  vite-env.d.ts
ui/src/components/graphCanvas/: graphCanvas.module.css  graphCanvas.tsx  physics.ts
ui/src/components/header/: header.module.css  header.tsx
ui/src/components/minimap/: minimap.module.css  minimap.tsx
ui/src/components/nodeDetail/: nodeDetail.module.css  nodeDetail.tsx
ui/src/components/sidebar/: sidebar.module.css  sidebar.tsx
