[workspace]
members = [
    "crates/aurelius-core",
    "crates/aurelius",
    "crates/au",
]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "MIT"
authors = ["Vladislav Rahmanov <blysspeak@pm.me>"]
repository = "https://github.com/Blysspeak/aurelius"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
async-trait = "0.1"
ignore = "0.4"
sha2 = "0.10"
axum = "0.8"
open = "5"
rust-embed = "8"
