[package]
name = "aurelius"
description = "Aurelius daemon and MCP server"
default-run = "aurelius"

[package.version]
workspace = true
[package.edition]
workspace = true
[package.license]
workspace = true
[package.authors]
workspace = true
[package.repository]
workspace = true

[lib]
name = "aurelius"
path = "src/lib.rs"

[[bin]]
name = "aurelius"
path = "src/main.rs"

[dependencies]
aurelius-core = { path = "../aurelius-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
